# titanic_app

./: Dockerfile  README.md  app.py  index.html  model.joblib  pyproject.toml  requirements.txt  train_script.py  tsne_transform.py
.github/workflows/: deploy.yml
data/: X_tsne.npy  config.YAML
models/: model.joblib  pipeline.joblib  tsne_model.joblib
