[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sklearn-flask-app"
version = "0.1.0"
description = "A Flask app to deploy a scikit-learn model"
authors = [
    { name = "Joseph McGuire", email = "joseph-c-mcg@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "dash",
    "flask",
    "plotly",
    "pandas",
    "numpy",
    "scikit-learn",
    "pyyaml",
    "joblib"
]

[tool.setuptools.packages.find]
where = ["."]